// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionStepDetails /> tests renders normal step 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        pipeline.execution.stepTitlePrefix
      </div>
      <div
        class="actions"
      >
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="bp3-tabs tabs"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration
                </th>
                <td>
                  <div>
                    MOCK DURATION
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="main"
            data-mode="step-details"
          >
            <div
              class="header"
            >
              <div>
                execution.stepLogs
              </div>
              <div
                class="rhs"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip"
                  data-name=""
                >
                  <span
                    class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon ExpandingSearchInput--flipicon"
                    icon="search"
                  >
                    <svg
                      data-icon="search"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        search
                      </desc>
                      <path
                        d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input "
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 164px;"
                    type="search"
                    value=""
                  />
                </div>
                <a
                  class="toConsoleView"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                >
                  <span>
                    consoleView
                  </span>
                </a>
              </div>
            </div>
            <pre
              class="container"
            >
              <div
                class="noLogs"
              >
                common.logs.noLogsText
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps does not fetches data for retry step, if already present 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        pipeline.execution.stepTitlePrefix
        Already_Present_Data
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="bp3-tabs tabs"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration
                </th>
                <td>
                  <div>
                    MOCK DURATION
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="main"
            data-mode="step-details"
          >
            <div
              class="header"
            >
              <div>
                execution.stepLogs
              </div>
              <div
                class="rhs"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip"
                  data-name=""
                >
                  <span
                    class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon ExpandingSearchInput--flipicon"
                    icon="search"
                  >
                    <svg
                      data-icon="search"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        search
                      </desc>
                      <path
                        d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input "
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 164px;"
                    type="search"
                    value=""
                  />
                </div>
                <a
                  class="toConsoleView"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                >
                  <span>
                    consoleView
                  </span>
                </a>
              </div>
            </div>
            <pre
              class="container"
            >
              <div
                class="noLogs"
              >
                common.logs.noLogsText
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps fetches data for retry step, if not present 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        pipeline.execution.stepTitlePrefix
        Retried Step 1
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="bp3-tabs tabs"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration
                </th>
                <td>
                  <div>
                    MOCK DURATION
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="main"
            data-mode="step-details"
          >
            <div
              class="header"
            >
              <div>
                execution.stepLogs
              </div>
              <div
                class="rhs"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip"
                  data-name=""
                >
                  <span
                    class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon ExpandingSearchInput--flipicon"
                    icon="search"
                  >
                    <svg
                      data-icon="search"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        search
                      </desc>
                      <path
                        d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input "
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 164px;"
                    type="search"
                    value=""
                  />
                </div>
                <a
                  class="toConsoleView"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                >
                  <span>
                    consoleView
                  </span>
                </a>
              </div>
            </div>
            <pre
              class="container"
            >
              <div
                class="noLogs"
              >
                common.logs.noLogsText
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps shows loader while loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        pipeline.execution.stepTitlePrefix
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="bp3-spinner"
    >
      <div
        class="bp3-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionStepDetails /> tests retried steps shows step selection 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <div
        class="title"
      >
        pipeline.execution.stepTitlePrefix
      </div>
      <div
        class="actions"
      >
        <div
          class="bp3-popover-wrapper"
        >
          <div
            class="bp3-popover-target"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main retry Button--with-current-color Button--iconOnly Button--without-shadow"
              data-status=""
              data-testid="retry-logs"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.retryStepCount
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-down StyledProps--main retryStatusIcon"
                icon="chevron-down"
              >
                <svg
                  data-icon="chevron-down"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    chevron-down
                  </desc>
                  <path
                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="toggle"
        >
          <label
            class="label"
            title="pipeline.execution.layouts.right"
          >
            <input
              checked=""
              name="layout"
              type="radio"
              value="RIGHT"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-right"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 .423) scale(.21167)"
                >
                  <rect
                    fill="#f2f2f2"
                    height="15"
                    rx="0.5"
                    stroke="#9ea9b4"
                    width="19"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M12 1h7v14h-7z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.float"
          >
            <input
              name="layout"
              type="radio"
              value="FLOATING"
            />
            <span
              class="bp3-icon StyledProps--main"
              data-icon="layout-float"
            >
              <svg
                height="16"
                viewBox="0 0 4.233 4.233"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  transform="translate(0 .403) scale(.20982)"
                >
                  <rect
                    fill="#000"
                    fill-opacity="0.05"
                    height="16.333"
                    rx="1"
                    width="20.176"
                  />
                  <rect
                    height="15.333"
                    rx="0.5"
                    stroke="#66798b"
                    stroke-opacity="0.6"
                    width="19.176"
                    x="0.5"
                    y="0.5"
                  />
                  <path
                    d="M9.303 3a1 1 0 011-1h7a1 1 0 011 1v9a1 1 0 01-1 1h-7a1 1 0 01-1-1zM14.303 14.5a.5.5 0 01.5-.5h3a.5.5 0 110 1h-3a.5.5 0 01-.5-.5z"
                    fill="#9ea9b4"
                  />
                </g>
              </svg>
            </span>
          </label>
          <label
            class="label"
            title="pipeline.execution.layouts.minimize"
          >
            <input
              name="layout"
              type="radio"
              value="MINIMIZE"
            />
            <span
              class="bp3-icon bp3-icon-minus StyledProps--main"
              icon="minus"
            >
              <svg
                data-icon="minus"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  minus
                </desc>
                <path
                  d="M13 7H3c-.55 0-1 .45-1 1s.45 1 1 1h10c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      class="bp3-tabs tabs"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          details
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          common.input
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          outputLabel
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration
                </th>
                <td>
                  <div>
                    MOCK DURATION
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="main"
            data-mode="step-details"
          >
            <div
              class="header"
            >
              <div>
                execution.stepLogs
              </div>
              <div
                class="rhs"
              >
                <div
                  class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip"
                  data-name=""
                >
                  <span
                    class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon ExpandingSearchInput--flipicon"
                    icon="search"
                  >
                    <svg
                      data-icon="search"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        search
                      </desc>
                      <path
                        d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input "
                    dir="auto"
                    placeholder="Search"
                    style="padding-right: 164px;"
                    type="search"
                    value=""
                  />
                </div>
                <a
                  class="toConsoleView"
                  href="/account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline?view=log"
                >
                  <span>
                    consoleView
                  </span>
                </a>
              </div>
            </div>
            <pre
              class="container"
            >
              <div
                class="noLogs"
              >
                common.logs.noLogsText
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <h1>
      Not Found
    </h1>
    <div
      data-testid="location"
    >
      /account/TEST_ACCOUNT_ID/cd/orgs/TEST_ORG/projects/TEST_PROJECT/pipelines/TEST_PIPELINE/executions/TEST_EXECUTION/pipeline
    </div>
  </div>
</div>
`;
